# robile_navigation_tasks

./: 222map.pgm  222map.yaml  README.md  astar_planner_launch.py  astar_planner_server.py  astar_tb3_launch.py  astar_turtlebot.launch.py  astar_turtlebot_node.py  task_division.md
astar_global_planner/: global_planner_plugin.xml  package.xml  setup.cfg  setup.py
astar_global_planner/astar_global_planner/: __init__.py  astar.py  astar_global_planner.py  best_astar_global_planner.py  frontier_based_astar.py  waypoint_follower.py  waypoint_manager.py
astar_global_planner/config/: nav2_controller.yaml  nav2_params.yaml
astar_global_planner/docs/: astar_planner_manual.md
astar_global_planner/launch/: global_planner.launch.py
astar_global_planner/test/: test_astar.py
localization/: amcl_node.py  learn_likelihood_field.ipynb  localization.py  mcl_node.py
localization/config/: amcl_params.yaml  mcl_params.yaml
localization/scripts/: README_save_map.md  README_validate_frames.md  save_map_for_tests.py  validate_frames.py
localization/tests/: __init__.py  test_amcl.py  test_mcl.py
maps/: __init__.py  astar_planner.py  closed_walls_auto.pgm  closed_walls_auto.yaml  closed_walls_map.pgm  closed_walls_map.yaml  map_task1.pgm  map_task1.yaml  simple.py  visualize_map.py
rosbags/rosbag2_2026_02_11-20_01_08/: baginfo.txt  metadata.yaml
rviz/: amcl_node.rviz  mcl_node.rviz  task1.rviz
simple_potential_field_planner/: simple_potential_field_planner.py
simple_potential_field_planner/config/: simple_potential_field_planner.yaml
(+1 files in other folders)
